--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -2,10 +2,10 @@
   "name": "auth",
   "version": "1.0.0",
   "description": "",
-  "main": "routes/auth.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start":"nodemon routes/auth.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,12 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase-admin": "^12.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.1",
+    "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
